--- a/ET49_DibujaSkia/ET49_DibujaSkia/MainPage.xaml
+++ b/ET49_DibujaSkia/ET49_DibujaSkia/MainPage.xaml
@@ -1,14 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:skia="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms"
              xmlns:local="clr-namespace:ET49_DibujaSkia"
              x:Class="ET49_DibujaSkia.MainPage">
 
-    <StackLayout>
-        <!-- Place new controls here -->
-    	<Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
-    </StackLayout>
+    <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+        <skia:SKCanvasView x:Name="areaDibujo" PaintSurface="OnCanvasViewPaintSurface" />
+    </Grid>
 
 </ContentPage>
